# hsfetch

./: .gitignore  CHANGELOG.md  README.md  hsfetch.cabal
app/: Main.hs
