cabal-version:      2.4
name:               hsfetch
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            
license-file:       LICENSE
author:             Phate6660
maintainer:         ValleyKnight@protonmail.com

executable hsfetch
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base   ^>=4.14.1.0,
        mr-env ^>=0.1.0.4
    hs-source-dirs:   app
    default-language: Haskell2010
